--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,6 +1,6 @@
 button.btn-menu {
   font-family: inherit;
-  font-size: 1.5em;
+  font-size: 1.2rem;
   color: inherit;
   padding: .4rem 1.5rem;
   background-color: inherit;
