--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -6,7 +6,7 @@ div.menu {
   background-color: #212841;
   padding: .6rem 0;
   min-height: 15rem;
-  min-width: 25rem;
+  min-width: 20rem;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -14,6 +14,7 @@ div.menu {
   align-items: center;
   gap: 2rem;
   max-height: 35rem;
+  max-width: 38rem;
   & > button {
     width: 60%;
   }
