--- a/src/components/modify-quiz/modify-quiz.scss
+++ b/src/components/modify-quiz/modify-quiz.scss
@@ -20,6 +20,13 @@ div.modify__footer {
   display: flex;
   justify-content: space-evenly;
   border-top: .12rem solid white;
+  button{
+    font-size: 1rem;
+    &:last-child {
+      border-color: red;
+    }
+  }
+
 }
 
 div.modify__main {
@@ -29,33 +36,10 @@ div.modify__main {
   grid-template-columns: minmax(14rem, 25rem) minmax(8rem, 25rem) ;
   gap :2rem;
 
-  textarea.question-text{
-    min-height: 6rem;
-    max-height: 22rem;
-    min-width: 100%;
-    max-width: 100%;
-    width: 100%;
-  }
-
-  textarea.question-text, input{
-    font-size: inherit;
-    color: inherit;
-    font-family: inherit;
-    background-color: inherit;
-    text-align: start;
-    padding: .3rem;
-    border: #1f3e58 solid .2rem;
-    border-radius: .8rem;
-  }
-
   div.answer-text {
     display: flex;
     flex-direction: column;
     gap: .5rem;
 
-    input {
-      min-height: 1.5rem;
-    }
   }
-
 }
