--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,10 @@ body {
   padding: 0;
   margin: 0;
 
+  * {
+    box-sizing: border-box;
+    padding: 0;
+  }
   #root {
     height: 100%;
     display: flex;
